--- a/package/feature_meal/pubspec_overrides.yaml
+++ b/package/feature_meal/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: core_linter
+# melos_managed_dependency_overrides: core_data
 dependency_overrides:
-  core_linter:
-    path: ../core_linter
+  core_data:
+    path: ../core_data
